<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/filterMenu" android:checkableBehavior="all">
        <item
            android:id="@+id/categoryEuropean"
            android:title="@string/categoryEuropean"
            android:checked="true"/>
        <item
            android:id="@+id/categoryAmerican"
            android:title="@string/categoryAmerican"
            android:checked="true"/>
        <item
            android:id="@+id/categoryAsian"
            android:title="@string/categoryAsian"
            android:checked="true"/>
        <item
            android:id="@+id/categoryEastern"
            android:title="@string/categoryEastern"
            android:checked="true"/>
        <item
            android:id="@+id/categoryMediterranean"
            android:title="@string/categoryMediterranean"
            android:checked="true"/>
        <item
            android:id="@+id/categoryPanasian"
            android:title="@string/categoryPanasian"
            android:checked="true"/>
        <item
            android:id="@+id/categoryRussian"
            android:title="@string/categoryRussian"
            android:checked="true"/>
        <item
            android:id="@+id/categoryOther"
            android:title="@string/categoryOther"
            android:checked="true"/>
    </group>

</menu>